Fix bamboo height to not overflow temple section

--- a/css/about.css
+++ b/css/about.css
@@ -42,8 +42,8 @@
 
 .about-hero__bamboo {
   position: absolute;
-  height: 130%;
-  top: -15%;
+  height: 100%;
+  bottom: 0;
   z-index: 2;
 }
 
